<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activCapturasEntrenador.VistaCrearCaptura">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="7dp"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="211dp">

        <TextView
            android:id="@+id/tv_titulo_crear_captura"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/crear_captura_titulo"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/tv_lista_entrenadores_nombre_ci" />

        <TextView
            android:id="@+id/tv_ci_entrenador_crear_captura"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/ejemplo_tv_lista_entrenadores_ci" />

        <TextView
            android:id="@+id/tv_nombre_entrenador_crear_captura"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/ejemplo_tv_lista_entrenadores_nombre" />

        <TextView
            android:id="@+id/tv_pokeball_crear_captura"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/tv_lista_capturas_tipo_pokeball" />


        <Spinner
            android:id="@+id/sp_pokeball_crear_captura"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="7dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_ejecutar_captura"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/btn_aceptar" />

        <Button
            android:id="@+id/btn_cancelar_ejecutar_captura"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/btn_cancelar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>