<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activEntren.VistaCrearEntrenador">

    <TextView
        android:id="@+id/tv_crear_nombre_entrenador"
        android:layout_width="215dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/crear_entrenador_nombre"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_crear_entrenador_id"
        app:layout_constraintStart_toStartOf="@+id/et_crear_entrenador_id"
        app:layout_constraintTop_toBottomOf="@+id/et_crear_entrenador_id"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="215dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/crear_entrenador_fechaNac"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/radg_entrenador_genero"
        app:layout_constraintStart_toStartOf="@+id/radg_entrenador_genero"
        app:layout_constraintTop_toBottomOf="@+id/radg_entrenador_genero" />

    <EditText
        android:id="@+id/et_crear_entrenador_nombre"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/crear_entrenador_nombre_help"
        app:layout_constraintEnd_toEndOf="@+id/tv_crear_nombre_entrenador"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/tv_crear_nombre_entrenador"
        app:layout_constraintTop_toBottomOf="@+id/tv_crear_nombre_entrenador" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="215dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/crear_entrenador_genero"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/et_crear_entrenador_nombre"
        app:layout_constraintStart_toStartOf="@+id/et_crear_entrenador_nombre"
        app:layout_constraintTop_toBottomOf="@+id/et_crear_entrenador_nombre" />

    <TextView
        android:id="@+id/tv_titulo_crear_entrenador"
        android:layout_width="243dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/crear_entrenador_titulo"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="215dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/crear_entrenador_id"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_titulo_crear_entrenador"
        app:layout_constraintStart_toStartOf="@+id/tv_titulo_crear_entrenador"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo_crear_entrenador" />

    <EditText
        android:id="@+id/et_crear_entrenador_id"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/crear_entrenador_id_help"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/radg_entrenador_genero"
        android:layout_width="215dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/rb_entrenador_M"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/crear_entrenador_genero_hombre" />

        <RadioButton
            android:id="@+id/rb_entrenador_F"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/crear_entrenador_genero_mujer" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <Button
            android:id="@+id/btn_crear_entrenador_sel_fecha"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/crear_entrenador_fechaNac_but" />

        <TextView
            android:id="@+id/tv_crear_entrenador_fechaNac"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/crear_entrenador_fechaNac_help" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/btn_crear_nuevo_entrenador"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/btn_aceptar" />

        <Button
            android:id="@+id/btn_cancelar_crear_entrenador"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/btn_salir" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>