<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_layout_entrenadores"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="10dp">


    <LinearLayout
        android:id="@+id/ll_layout_entrenadores"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="10dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_cr_entrenador_contador"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ejemplo_tv_lista_entrenadores_num"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tv_lista_entrenadores_nombre_ci" />

                <TextView
                    android:id="@+id/tv_cr_entrenador_nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/ejemplo_tv_lista_entrenadores_nombre" />

                <TextView
                    android:id="@+id/tv_cr_entrenador_numCed"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/ejemplo_tv_lista_entrenadores_ci" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_lista_entrenador_generoo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tv_lista_entrenadores_genero" />

                    <TextView
                        android:id="@+id/tv_cr_entrenador_genero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ejemplo_tv_lista_entrenadores_genero" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_lista_entrenador_fechao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tv_lista_entrenadores_fechaNac" />

                    <TextView
                        android:id="@+id/tv_cr_entrenador_fecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ejemplo_tv_lista_entrenadores_fechaNac" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_lista_entrenador_activoo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tv_lista_entrenadores_activo" />

                    <TextView
                        android:id="@+id/tv_cr_entrenador_activo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ejemplo_tv_lista_entrenadores_activo" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>